chat relooking and clippy

--- a/test/mockServer.html
+++ b/test/mockServer.html
@@ -5,8 +5,20 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Order Browser</title>
+	
+<!-- Useless clippy for fun -->
+<link rel="stylesheet" type="text/css" href="../customChatView/clippy/clippy.css" media="all">
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="../customChatView/clippy/clippy.min.js"></script>
 
-	<!-- Bootstrapping UI5 -->
+
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+	<script src="../customChatView/customChatView.js"></script>
+	<LINK rel="stylesheet" type="text/css" href="../customChatView/customChatView.css">
+
+		<!-- Bootstrapping UI5 -->
 	<script id="sap-ui-bootstrap"
 			src="../../../../../../../resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m, sap.ui.layout"
@@ -41,9 +53,4 @@
 <!-- UI Content -->
 <body class="sapUiBody" id="content">
 </body>
-<script src="https://cdn.cai.tools.sap/webchat/webchat.js"
-channelId="17524d88-fb85-4929-bb6b-c3250597cee8"
-token="5faf52aff45881ab0fce47c5991c71cc"
-id="cai-webchat"
-></script>
 </html>
